--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+  <title>First Website</title>
+  
+  <body>
+    <h1>This is my first github page!</h1>
+  </body>
+</html>
