--- a/M01-2.html
+++ b/M01-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 <head>
 	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width">
@@ -24,6 +24,7 @@
      	<li>Preheat oven to 375 degrees F (190 degrees C).</li>
         <li>Melt butter in a large saucepan over medium heat. Add garlic powder, rosemary, salt, and pepper; simmer until flavors combine, about 1 minute. Stir in honey; bring to a boil. Reduce heat to low. Dip chicken into sauce, 1 piece at a time, until coated. Place chicken on a 9x13-inch baking pan; pour remaining sauce over chicken.</li>
         <li>Bake chicken in the preheated oven until no longer pink at the bone and the juices run clear, about 30 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C). Remove from oven; immediately turn over chicken with tongs to coat the top with sauce.</li>
+	</ol>
         
 <p>
 	<a href="https://www.allrecipes.com/recipe/254940/honey-garlic-chicken-with-rosemary/?internalSource=popular&referringContentType=home%20page&clickId=cardslot%203">Link to Recipe</a>
