--- a/M01-3.html
+++ b/M01-3.html
@@ -21,21 +21,22 @@
         <li>6 skinless chicken thighs</li>
      </ul>
      <ol>
-     	<li>Preheat oven to 375 degrees F (190 degrees C).</li><br>
-        <img src="https://images.media-allrecipes.com/userphotos/600x600/3857583.jpg" alt="Amateur Honey Garlic Chicken picture" title="Honey Garlic Chicken" />
-        <li>Melt butter in a large saucepan over medium heat. Add garlic powder, rosemary, salt, and pepper; simmer until flavors combine, about 1 minute. Stir in honey; bring to a boil. Reduce heat to low. Dip chicken into sauce, 1 piece at a time, until coated. Place chicken on a 9x13-inch baking pan; pour remaining sauce over chicken.</li><br>
-        <img src="https://images.media-allrecipes.com/userphotos/720x405/5268413.jpg" alt="Closeup of Chicken" title="Closeup of Honey Garlic Chicken" />
-        <li>Bake chicken in the preheated oven until no longer pink at the bone and the juices run clear, about 30 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C). Remove from oven; immediately turn over chicken with tongs to coat the top with sauce.</li><br>
-        <img src="https://images.media-allrecipes.com/userphotos/720x405/4986545.jpg" alt="Honey Garlic Chicken cooking" title="Honey Garlic Chicken cooking" />
+     	<li>Preheat oven to 375 degrees F (190 degrees C).
+		<img src="https://images.media-allrecipes.com/userphotos/600x600/3857583.jpg" alt="Amateur 		Honey Garlic Chicken picture" title="Honey Garlic Chicken" />
+	</li>
+        <li>Melt butter in a large saucepan over medium heat. Add garlic powder, rosemary, salt, and pepper; simmer until flavors combine, about 1 minute. Stir in honey; bring to a boil. Reduce heat to low. Dip chicken into sauce, 1 piece at a time, until coated. Place chicken on a 9x13-inch baking pan; pour remaining sauce over chicken.
+		<img src="https://images.media-allrecipes.com/userphotos/720x405/5268413.jpg" alt="Closeup of 		Chicken" title="Closeup of Honey Garlic Chicken" />
+	</li>
+        <li>Bake chicken in the preheated oven until no longer pink at the bone and the juices run clear, about 30 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C). Remove from oven; immediately turn over chicken with tongs to coat the top with sauce.
+		<img src="https://images.media-allrecipes.com/userphotos/720x405/4986545.jpg" alt="Honey Garlic Chicken cooking" title="Honey Garlic Chicken cooking" />
+	</li>
         </ol>
         
 <p>
 	<a href="https://www.allrecipes.com/recipe/254940/honey-garlic-chicken-with-rosemary/?internalSource=popular&referringContentType=home%20page&clickId=cardslot%203">Link to Recipe</a>
 </p>
-<p>
 	<h3>Similar Recipes</h3>
 	<a href="https://www.allrecipes.com/recipe/79521/slow-cooker-honey-garlic-chicken/?internalSource=similar_recipe_banner&referringId=254940&referringContentType=recipe&clickId=simslot_1">Slow Cooker Garlic Chicken</a>
-</p>
 <p>
 	<a href="https://www.allrecipes.com/recipe/18032/slow-cooker-lemon-garlic-chicken-ii/">Slow Cooker Lemon Chicken</a>
 </p>
