--- a/Module01/M01-3.html
+++ b/Module01/M01-3.html
@@ -43,6 +43,8 @@
 <p>
 	<a href="https://www.allrecipes.com/recipe/174543/slow-cooker-butter-chicken/">Slow Cooker Butter Chicken</a>
 </p>
+<p>
+	<a href="https://ryanbaird4.github.io/PROG-109/">Go Home</a>
 </body>
 
 </html>
