--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <title>First Website</title>
-  
-  <body>
-    <h1>This is my first github page!</h1>
-  </body>
+<head>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width">
+ <title>PROG 109 - Intro to Web Development</title>
+</head>
+<body>
+  <h1>PROG 109 - Intro to Web Development</h1>
+  <a href="https://ryanbaird4.github.io/PROG-109/Module01/index.html">Module 01</a>
+  <a href="https://ryanbaird4.github.io/PROG-109/Module02/index.html">Module 02</a>
+  <a href="https://ryanbaird4.github.io/PROG-109/Module03/index.html">Module 03</a>
+</body>
 </html>
