--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>PROG 109 - Intro to Web Development</h1>
-  <a href="https://ryanbaird4.github.io/PROG-109/Module01/index.html">Module 01</a><br>
-  <a href="https://ryanbaird4.github.io/PROG-109/Module02/index.html">Module 02</a><br>
-  <a href="https://ryanbaird4.github.io/PROG-109/Module03/index.html">Module 03</a><br>
+  <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/index.html">Module 01</a></p>
+  <p><a href="https://ryanbaird4.github.io/PROG-109/Module02/index.html">Module 02</a></p>
+  <p><a href="https://ryanbaird4.github.io/PROG-109/Module03/index.html">Module 03</a></p>
 </body>
 </html>
