--- a/Module01/index.html
+++ b/Module01/index.html
@@ -6,10 +6,10 @@
  <title>Introduction to Web Development: HTML</title>
 </head>
 <body>
-  <h1>Introduction to Web Development: HTML</h1>
-    <a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-1">Exercise 1</a>
-    <a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-2">Exercise 2</a>
-    <a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-3">Exercise 3</a>
+  <h1>Module 01 - Introduction to Web Development: HTML</h1>
+   <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-1">Exercise 1</a></p>
+   <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-2">Exercise 2</a></p>
+   <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-3">Exercise 3</a></p>
    <p>
     <a href="https://ryanbaird4.github.io/PROG-109/index.html">Go Home</a>
    </p>
