--- a/Module01/index.html
+++ b/Module01/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>Module 01 - Introduction to Web Development: HTML</h1>
+  <h2>
+   <p>In this module, we learned about how the internet works. We also learned about structure of a web page using HTML. By using HTML, one can create different forms of text, lists, links, and images.</p>
+   <p>These first five chapters were tough to grasp at first, but once the pieces came together it seems amazing how a webpage (and website directory) are put together.</p>
    <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-1">Exercise 1</a></p>
    <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-2">Exercise 2</a></p>
    <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-3">Exercise 3</a></p>
