--- a/Module01/M01-2.html
+++ b/Module01/M01-2.html
@@ -29,6 +29,9 @@
 <p>
 	<a href="https://www.allrecipes.com/recipe/254940/honey-garlic-chicken-with-rosemary/?internalSource=popular&referringContentType=home%20page&clickId=cardslot%203">Link to Recipe</a>
 </p>
+
+	<p><a href="https://ryanbaird4.github.io/PROG-109/index.html">Go Home</a>
+
 </body>
 
 </html>
