added 2 small images

--- a/Module01/Module_Webpage.html
+++ b/Module01/Module_Webpage.html
@@ -24,6 +24,8 @@
 			<a href="https://www.allrecipes.com/recipe/217002/quinoa-and-black-bean-chili/"><img src="https://images.media-allrecipes.com/userphotos/560x315/623695.jpg" alt="Quinoa and Black Bean Chili" title="Quiona Chili"  height="90" width="160" /></a>
 			<a href="https://www.allrecipes.com/recipe/193873/jerres-black-bean-and-pork-tenderloin-slow-cooker-chili/"><img src="https://images.media-allrecipes.com/userphotos/720x405/3759726.jpg" alt="Jerre's Black Bean and Pork Tenderloin" title="Pork Tenderloin Chili" height="90" width="144" /></a>
 			<a href="https://www.allrecipes.com/recipe/229730/sweet-potato-and-black-bean-chili/"><img src="https://images.media-allrecipes.com/userphotos/720x405/5117435.jpg" alt="Sweet Potato and Black Bean Chili" title="Sweet Potato Chili" height="90" width="144" /></a>
+			<a href="https://www.allrecipes.com/recipe/230498/grandmas-chicken-and-black-bean-chili/"><img src="https://images.media-allrecipes.com/userphotos/720x405/2675102.jpg" alt="Grandma's Chicken Chili" title="Grandma's Chicken and Black Bean Chili" height="90" width="144" /></a>
+        <a href="https://www.allrecipes.com/recipe/241604/lamb-black-bean-chili/"><img src="https://images.media-allrecipes.com/userphotos/720x405/3478768.jpg" alt="Lamb Chili" title="Lamb Black Bean Chili" height="90" width="144" /></a>
 		</p>
 	</body>
 </html>
