--- a/Module01/index.html
+++ b/Module01/index.html
@@ -15,6 +15,7 @@
    <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-2">Exercise 2</a></p>
    <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/M01-3">Exercise 3</a></p>
    <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/Module_Webpage">Module Webpage</a></p>
+<p><a href="https://ryanbaird4.github.io/PROG-109/Module01/artifact01.html">Artifact #1 - Create a Resume</a></p>
    <p>
     <a href="https://ryanbaird4.github.io/PROG-109/index.html">Go Home</a>
    </p>
