--- a/Module01/artifact01.html
+++ b/Module01/artifact01.html
@@ -112,6 +112,7 @@
    Fax: +555 222 334<br>
    Email: <a href="mailto:izabelam@artofmarketing.com">izabelam@artofmarketing.com</a>
    </address>
+<p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8Zk-Z6PywxZ67Kln9hrEk_kX3TV4koQNLqUBd7fx3zpXeAv9_mA" alt="Sun Behind a Tree in Snow"></p>
 
 <p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5" title="HTML5"></a></p>
 
