--- a/Module02/index.html
+++ b/Module02/index.html
@@ -12,9 +12,9 @@
   </h2>
    <p><a href="https://ryanbaird4.github.io/PROG-109/Module02/chapter6">Exercise 1</a></p>
    <p><a href="https://ryanbaird4.github.io/PROG-109/Module02/chapter7">Exercise 2</a></p>
-   <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/absolutePath">Exercise 3 - Absolute Path</a></p>
-   	<p><a href="https://ryanbaird4.github.io/PROG-109/Module01/relativePath">Relative Path</a></p>
-<?-- 	<p><a href="https://ryanbaird4.github.io/PROG-109/Module01/artifact01.html">Module 02: HTML Tables</a></p> -->
+   <p><a href="https://ryanbaird4.github.io/PROG-109/Module02/absolutePath">Exercise 3 - Absolute Path</a></p>
+   	<p><a href="https://ryanbaird4.github.io/PROG-109/Module02/relativePath">Relative Path</a></p>
+<p><a href="https://ryanbaird4.github.io/PROG-109/Module02/ModuleAssignment.html">Module 02: HTML Tables</a></p>
    <p>
     <a href="https://ryanbaird4.github.io/PROG-109/index.html">Go Home</a>
    </p>
