--- a/Module03/index.html
+++ b/Module03/index.html
@@ -10,9 +10,9 @@
   <h2>
     	
   </h2>
-   <p><a href="/exercise01.html">Exercise 1</a></p>
-   <p><a href="/exercise02.html">Exercise 2</a></p>
-   <p><a href="/exercise03.html">Exercise 3</a></p>
+   <p><a href="exercise01.html">Exercise 1</a></p>
+   <p><a href="exercise02.html">Exercise 2</a></p>
+   <p><a href="exercise03.html">Exercise 3</a></p>
    <p><a href="ModuleAssignment.html">Module 03 Assignment: CSS</a></p>
    <p>
     <a href="https://ryanbaird4.github.io/PROG-109/index.html">Go Home</a>
