--- a/Module03/index.html
+++ b/Module03/index.html
@@ -14,6 +14,7 @@
    <p><a href="exercise02.html">Exercise 2</a></p>
    <p><a href="exercise03.html">Exercise 3</a></p>
    <p><a href="ModuleAssignment.html">Module 03 Assignment: CSS</a></p>
+   <p><a href="chess.html">Chessboard</a></p>
    <p>
     <a href="https://ryanbaird4.github.io/PROG-109/index.html">Go Home</a>
    </p>
