--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/index.html">Module 01</a></p>
   <p><a href="https://ryanbaird4.github.io/PROG-109/Module02/index.html">Module 02</a></p>
   <p><a href="https://ryanbaird4.github.io/PROG-109/Module03/index.html">Module 03</a></p>
-  <p><a href="Module04/index.html>Module 04</a></p>
+  <p><a href="Module04/index.html">Module 04</a></p>
 </body>
 </html>
