--- a/Module04/ModuleAssignment.html
+++ b/Module04/ModuleAssignment.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 	<head>
 		<title>Liquid Layout</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<link href="style3.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/unique" type="text/css"/>
 	</head>
@@ -18,24 +20,23 @@
 				</ul>
 			</nav>
 		</header>
-		<main>
+		<div>
 			<section class="feature">
-				<p>Feature</p>
+				<h3>Feature</h3>
 			</section>
 			<article class="column1">
-				<p>Column One</p>
+				<h4>Column One</h4>
 			</article>
 			<article class="column2">
-				<p>Column Two</p>
+				<h4>Column Two</h4>
 			</article>
 			<article class="column3">
-				<p>Column Three</p>
+				<h4>Column Three</h4>
 			</article>
-		</main>
+		</div>
 		<footer>
 			<p>&copy; Copyright 2011</p>
 		</footer>
 	</body>
 </html>
-
 
