--- a/Module04/ModuleAssignment.html
+++ b/Module04/ModuleAssignment.html
@@ -20,7 +20,7 @@
 				</ul>
 			</nav>
 		</header>
-		<div>
+		<div class="main">
 			<section class="feature">
 				<h3>Feature</h3>
 			</section>
