--- a/ModuleAssignments/M03-1.html
+++ b/ModuleAssignments/M03-1.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Module 02 - Exercise 1</title>
-  <link href="style1.css" rel="stylesheet" type="text/css" />
+  <link href="style3-1.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <h1>First HTML using CSS</h1>
