--- a/ModuleAssignments/M03-2.html
+++ b/ModuleAssignments/M03-2.html
@@ -2,7 +2,7 @@
 <html lang=en>
 	<head>
 		<title>Color</title>
-		<link href="style2.css" type="text/css" rel="stylesheet" />
+		<link href="style3-2.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 		<h1>pH Scale</h1>
