--- a/ModuleAssignments/M04-2.html
+++ b/ModuleAssignments/M04-2.html
@@ -2,7 +2,7 @@
 <html lang=en>
 	<head>
 		<title>Images</title>
-		<link href="style1.css" rel="stylesheet" type="text/css" />
+		<link href="style4-2.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<div class="wrapper">
