--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang=en>
-<head>
- <meta charset="utf-8">
- <meta name="viewport" content="width=device-width">
- <title>PROG 109 - Intro to Web Development</title>
-</head>
-<body>
-  <h1>PROG 109 - Intro to Web Development</h1>
-  <p><a href="https://ryanbaird4.github.io/PROG-109/Module01/index.html">Module 01</a></p>
-  <p><a href="https://ryanbaird4.github.io/PROG-109/Module02/index.html">Module 02</a></p>
-  <p><a href="https://ryanbaird4.github.io/PROG-109/Module03/index.html">Module 03</a></p>
-  <p><a href="Module04/index.html">Module 04</a></p>
-</body>
+	<head>
+		<title>Liquid Layout</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<link href="style.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/unique" type="text/css"/>
+	</head>
+	<body>
+		<header>
+			<h1>PROG 109 - Intro to Web Development</h1>
+			<nav>
+				<ul>
+					<li><a href="https://ryanbaird4.github.io/PROG-109/">Home</a></li>
+					<li><a href="AboutMe.html">About Me</a></li>
+					<li><a href="Coursework.html">Coursework</a></li>
+					<li><a href="Artifacts/index.html">Artifacts</a></li>
+					<li><a href="ModuleAssignments/index.html">Module Assignments</a></li>
+                    <li><a href="">Contact Me</a></li>
+                    <li><a href="">Creative Page</a></li>
+				</ul>
+			</nav>
+		</header>
+		<div class="main">
+			<section class="feature">
+				<h3>Feature</h3>
+			</section>
+			<article class="column1">
+				<h4>Column One</h4>
+			</article>
+			<article class="column2">
+				<h4>Column Two</h4>
+			</article>
+			<article class="column3">
+				<h4>Column Three</h4>
+			</article>
+		</div>
+		<footer>
+			<p>&copy; Copyright 2011</p>
+		</footer>
+	</body>
 </html>
+
+
