--- a/ModuleAssignments/M03-3.html
+++ b/ModuleAssignments/M03-3.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
 		<title>Module 03</title>
-		<link href="style3.css" rel="stylesheet" type="text/css" />
+		<link href="style3-3.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/dancing" type="text/css"/>
 	</head>
 	<body>
