--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -4,12 +4,12 @@
 		<title>Artifacts</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<link href="style.css" rel="stylesheet" type="text/css" />
+		<link href="style_i.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/unique" type="text/css"/>
 	</head>
 	<body>
       <h1>Artifacts</h1>
-      <p><a href="Module01.html" target=_blank><h3>Module 01 (Create a Resume)</h3></a>
+      <p><a href="artifact01.html" target=_blank><h3>Module 01 (Create a Resume)</h3></a>
         - Create a one page, resume style using HTML.</p>
       <p><a href="chess.html" target=_blank><h3>Module 02 (Chessboard)</h3></a>
         - Create a one page HTML document that will contain a Chessboard with a CSS file.</p>
