--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
 	<head>
-		<title>Liquid Layout</title>
+		<title>Ryan Baird's Website</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<link href="style.css" rel="stylesheet" type="text/css" />
