--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<nav>
 				<ul>
 					<li><a href="https://ryanbaird4.github.io/PROG-109/">Home</a></li>
-					<li><a href="AboutMe.html">About Me</a></li>
-					<li><a href="Coursework.html">Coursework</a></li>
+					<li><a href="AboutMe/index.html">About Me</a></li>
+					<li><a href="Coursework/index.html">Coursework</a></li>
 					<li><a href="Artifacts/index.html">Artifacts</a></li>
 					<li><a href="ModuleAssignments/index.html">Module Assignments</a></li>
                     <li><a href="">Contact Me</a></li>
