changed relative path for css

--- a/Coursework/index.html
+++ b/Coursework/index.html
@@ -4,7 +4,7 @@
 		<title>Coursework</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<link href="style.css" rel="stylesheet" type="text/css" />
+		<link href="../style.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/unique" type="text/css"/>
 	</head>
 	<body>
