--- a/Coursework/index.html
+++ b/Coursework/index.html
@@ -8,7 +8,22 @@
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/unique" type="text/css"/>
 	</head>
 	<body>
-      <h1>Coursework</h1>
+<header>
+			<h1>PROG 109 - Intro to Web Development</h1>
+			<nav>
+				<ul>
+					<li><a href="https://ryanbaird4.github.io/PROG-109/">Home</a></li>
+					<li><a href="AboutMe/index.html">About Me</a></li>
+					<li><a href="Coursework/index.html">Coursework</a></li>
+					<li><a href="Artifacts/index.html">Artifacts</a></li>
+					<li><a href="ModuleAssignments/index.html">Module Assignments</a></li>
+                    <li><a href="">Contact Me</a></li>
+                    <li><a href="">Creative Page</a></li>
+				</ul>
+			</nav>
+		</header>
+
+      <h2>Coursework</h2>
       <h3>PROG 109 - Intro to Web Development</h3>
       <h4><p>Instructor: Maricel Medina-Mora</p>
         <p>Introduces fundamental programming techniques using current web development software. Students design procedures and write computer instructions to solve business problems, learn procedural programming, develop graphical user interfaces for the web and work with events and objects.</p>
