--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang=en>
 	<head>
-		<title>Coursework</title>
+		<title>About Me</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<link href="../style.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/unique" type="text/css"/>
 	</head>
 	<body>
-<header>
+      <header>
 			<h1>PROG 109 - Intro to Web Development</h1>
 			<nav>
 				<ul>
@@ -22,11 +22,7 @@
 				</ul>
 			</nav>
 		</header>
-
-      <h2>Coursework</h2>
-      <h3>PROG 109 - Intro to Web Development</h3>
-      <h4><p>Instructor: Maricel Medina-Mora</p>
-        <p>Introduces fundamental programming techniques using current web development software. Students design procedures and write computer instructions to solve business problems, learn procedural programming, develop graphical user interfaces for the web and work with events and objects.</p>
-        <a href="https://www.bellevuecollege.edu/classes/All/PROG/109" target=_blank>Class Catalog</a>
-	</body>
+      <h2>About Me</h2>
+      <h3>My name is Ryan Baird. I am currently taking classes to obtain an Associate's Degree in Information Systems. My goal is to also be accepted into the Data Analytics Bachelor's Program at Bellevue College.<h3>
+    </body>
 </html>
