--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -8,11 +8,25 @@
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/unique" type="text/css"/>
 	</head>
 	<body>
-      <h1>Artifacts</h1>
-      <p><a href="artifact01.html" target=_blank><h3>Module 01 (Create a Resume)</h3></a>
-        - Create a one page, resume style using HTML.</p>
-      <p><a href="chess.html" target=_blank><h3>Module 02 (Chessboard)</h3></a>
-        - Create a one page HTML document that will contain a Chessboard with a CSS file.</p>
-        
+	<header>
+			<h1>PROG 109 - Intro to Web Development</h1>
+			<nav>
+				<ul>
+					<li><a href="https://ryanbaird4.github.io/PROG-109/">Home</a></li>
+					<li><a href="AboutMe/index.html">About Me</a></li>
+					<li><a href="Coursework/index.html">Coursework</a></li>
+					<li><a href="Artifacts/index.html">Artifacts</a></li>
+					<li><a href="ModuleAssignments/index.html">Module Assignments</a></li>
+                    			<li><a href="../ContactMe/index.html">Contact Me</a></li>
+                    			<li><a href="../CreativePage/index.html">Creative Page</a></li>
+				</ul>
+			</nav>
+		</header>
+
+      <h2>Artifacts</h2>
+      <p><a href="artifact01.html" target=_blank><h3>Module 01 (Create a Resume)</a><br>
+        - Create a one page, resume style using HTML.</h3></p>
+      <p><a href="chess.html" target=_blank><h3>Module 02 (Chessboard)</a><br>
+        - Create a one page HTML document that will contain a Chessboard with a CSS file.</h3></p>
 	</body>
 </html>
