--- a/ModuleAssignments/index.html
+++ b/ModuleAssignments/index.html
@@ -8,7 +8,22 @@
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/unique" type="text/css"/>
 	</head>
 	<body>
-      <h1>Module Assignments (and Exercises)</h1>
+	<header>
+			<h1>PROG 109 - Intro to Web Development</h1>
+			<nav>
+				<ul>
+					<li><a href="https://ryanbaird4.github.io/PROG-109/">Home</a></li>
+					<li><a href="../AboutMe/index.html">About Me</a></li>
+					<li><a href="../Coursework/index.html">Coursework</a></li>
+					<li><a href="../Artifacts/index.html">Artifacts</a></li>
+					<li><a href="../ModuleAssignments/index.html">Module Assignments</a></li>
+                    			<li><a href="../ContactMe/index.html">Contact Me</a></li>
+                    			<li><a href="../CreativePage/index.html">Creative Page</a></li>
+				</ul>
+			</nav>
+		</header>
+
+      <h2>Module Assignments (and Exercises)</h2>
       <p><a href="Module01.html" target=_blank><h3>Module 01 Assignment</a><br>
         - Create a page that shows the main image of a recipe and five small images of other recipes.</h3></p>
       <p><a href="M01-1.html" target=_blank>Module 01 - Exercise 1</a><br>
