--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 					<li><a href="Coursework/index.html">Coursework</a></li>
 					<li><a href="Artifacts/index.html">Artifacts</a></li>
 					<li><a href="ModuleAssignments/index.html">Module Assignments</a></li>
-                    <li><a href="">Contact Me</a></li>
-                    <li><a href="">Creative Page</a></li>
+                    			<li><a href="ContactMe/index.html">Contact Me</a></li>
+                    			<li><a href="CreativePage/index.html">Creative Page</a></li>
 				</ul>
 			</nav>
 		</header>
