--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -13,10 +13,10 @@
 			<nav>
 				<ul>
 					<li><a href="https://ryanbaird4.github.io/PROG-109/">Home</a></li>
-					<li><a href="AboutMe/index.html">About Me</a></li>
-					<li><a href="Coursework/index.html">Coursework</a></li>
-					<li><a href="Artifacts/index.html">Artifacts</a></li>
-					<li><a href="ModuleAssignments/index.html">Module Assignments</a></li>
+					<li><a href="../AboutMe/index.html">About Me</a></li>
+					<li><a href="../Coursework/index.html">Coursework</a></li>
+					<li><a href="../Artifacts/index.html">Artifacts</a></li>
+					<li><a href="../ModuleAssignments/index.html">Module Assignments</a></li>
                     			<li><a href="../ContactMe/index.html">Contact Me</a></li>
                     			<li><a href="../CreativePage/index.html">Creative Page</a></li>
 				</ul>
