--- a/ContactMe/thankyou.html
+++ b/ContactMe/thankyou.html
@@ -23,7 +23,7 @@
 			</nav>
 		</header>
       <h2>Contact Me</h2>
-        <h3>Thank you!<3>
+        <h3>Thank you!</h3>
       </form>    
     </body>
 </html>
