--- a/ContactMe/index.html
+++ b/ContactMe/index.html
@@ -35,6 +35,7 @@
           <label>Comment:<br>
             <input type="text" name="comment" />
           </label><br>
+          <input type="submit" name="myContact" value="Submit" />
       </form>    
     </body>
 </html>
