--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>PROG 109 - Intro to Web Development</h1>
 			<nav>
 				<ul>
-					<li><a href="https://ryanbaird4.github.io/PROG-109/">Home</a></li>
+					<li><a href="https://ryanbaird4.github.io/PROG-109/index.html">Home</a></li>
 					<li><a href="AboutMe/index.html">About Me</a></li>
 					<li><a href="Coursework/index.html">Coursework</a></li>
 					<li><a href="Artifacts/index.html">Artifacts</a></li>
