--- a/ContactMe/thankyou.html
+++ b/ContactMe/thankyou.html
@@ -12,13 +12,13 @@
 			<h1>PROG 109 - Intro to Web Development</h1>
 			<nav>
 				<ul>
-					<li><a href="https://ryanbaird4.github.io/PROG-109/">Home</a></li>
+					<li><a href="https://ryanbaird4.github.io/PROG-109/index.html">Home</a></li>
 					<li><a href="../AboutMe/index.html">About Me</a></li>
 					<li><a href="../Coursework/index.html">Coursework</a></li>
 					<li><a href="../Artifacts/index.html">Artifacts</a></li>
 					<li><a href="../ModuleAssignments/index.html">Module Assignments</a></li>
-                    <li><a href="../ContactMe.html">Contact Me</a></li>
-                    <li><a href="../CreativePage.html">Creative Page</a></li>
+                   			 <li><a href="../ContactMe/index.html">Contact Me</a></li>
+                    			<li><a href="../CreativePage/index.html">Creative Page</a></li>
 				</ul>
 			</nav>
 		</header>
