--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -23,6 +23,6 @@
 			</nav>
 		</header>
       <h2>About Me</h2>
-      <h3>My name is Ryan Baird. I am currently taking classes to obtain an Associate's Degree in Information Systems. My goal is to also be accepted into the Data Analytics Bachelor's Program at Bellevue College.<h3>
+      <h3>My name is Ryan Baird. I am currently taking classes to obtain an Associate's Degree in Information Systems. My goal is to also be accepted into the Data Analytics Bachelor's Program at Bellevue College.</h3>
     </body>
 </html>
