--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -24,9 +24,9 @@
 		</header>
 
       <h2>Artifacts</h2>
-      <p><a href="artifact01.html" target=_blank><h3>Module 01 (Create a Resume)</a><br>
-        - Create a one page, resume style using HTML.</h3></p>
-      <p><a href="chess.html" target=_blank><h3>Module 02 (Chessboard)</a><br>
-        - Create a one page HTML document that will contain a Chessboard with a CSS file.</h3></p>
+      <h3><a href="artifact01.html" target=_blank>Module 01 (Create a Resume)</a><br>
+        - Create a one page, resume style using HTML.</h3>
+      <h3><a href="chess.html" target=_blank><h3>Module 02 (Chessboard)</a><br>
+        - Create a one page HTML document that will contain a Chessboard with a CSS file.</h3>
 	</body>
 </html>
