--- a/Coursework/index.html
+++ b/Coursework/index.html
@@ -25,7 +25,7 @@
 
       <h2>Coursework</h2>
       <h3>PROG 109 - Intro to Web Development</h3>
-      <h4><p>Instructor: Maricel Medina-Mora</p>
+      <h4>Instructor: Maricel Medina-Mora</h4>
         <p>Introduces fundamental programming techniques using current web development software. Students design procedures and write computer instructions to solve business problems, learn procedural programming, develop graphical user interfaces for the web and work with events and objects.</p>
         <a href="https://www.bellevuecollege.edu/classes/All/PROG/109" target=_blank>Class Catalog</a>
 	</body>
