fixed contact form

--- a/ContactMe/index.html
+++ b/ContactMe/index.html
@@ -36,6 +36,7 @@
             <input type="text" name="comment" />
           </label><br>
           <input type="submit" name="myContact" value="Submit" />
+	</fieldset>
       </form>    
     </body>
 </html>
