--- a/ModuleAssignments/index.html
+++ b/ModuleAssignments/index.html
@@ -48,6 +48,11 @@
       <p><a href="M04-1.html" target=_blank>Module 04 - Exercise 1</a><br>
         <a href="M04-2.html" target=_blank>Module 04 - Exercise 2</a><br>
         <a href="M04-3.html" target=_blank>Module 04 - Exercise 3</a></p>
-        
+       
+      <h3><a href="Module05.html" target=_blank>Module 05 Assignment</a><br>
+	- xxx
+	<p><a href="week5.html" target=_blank>Module 05 - Exercise 1</a><br>
+	<p><a href="M05-2.html" target=_blank>Module 05 - Exercise 2</a><br>
+	<p><a href="Bullseye.html" target=_blank>Module 05 - Exercise 3</a><br> 
 	</body>
 </html>
