--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -24,9 +24,9 @@
 		</header>
 
       <h2>Artifacts</h2>
-      <h3><a href="artifact01.html" target=_blank>Module 01 (Create a Resume)</a><br>
+      <h3><a href="artifact01.html" target=_blank>Module 01 (Create a Resume)<img src="images/resume.png" alt="chessboard"></a><br>
         - Create a one page, resume style using HTML.</h3>
-      <h3><a href="chess.html" target=_blank>Module 02 (Chessboard)</a><br>
+      <h3><a href="chess.html" target=_blank>Module 02 (Chessboard)<img src="images/chessboard.png" alt="chessboard"></a><br>
         - Create a one page HTML document that will contain a Chessboard with a CSS file.</h3>
 	</body>
 </html>
