--- a/ModuleAssignments/index.html
+++ b/ModuleAssignments/index.html
@@ -52,7 +52,7 @@
       <h3><a href="Module05.html" target=_blank>Module 05 Assignment</a><br>
 	- xxx</h3>
 	<p><a href="week5.html" target=_blank>Module 05 - Exercise 1</a><br>
-	<p><a href="M05-2.html" target=_blank>Module 05 - Exercise 2</a><br>
-	<p><a href="Bullseye.html" target=_blank>Module 05 - Exercise 3</a><br></p>
+	 <a href="M05-2.html" target=_blank>Module 05 - Exercise 2</a><br>
+	 <a href="Bullseye.html" target=_blank>Module 05 - Exercise 3</a><br></p>
 	</body>
 </html>
