--- a/ModuleAssignments/index.html
+++ b/ModuleAssignments/index.html
@@ -50,7 +50,7 @@
         <a href="M04-3.html" target=_blank>Module 04 - Exercise 3</a></p>
        
       <h3><a href="Module05.html" target=_blank>Module 05 Assignment</a><br>
-	- xxx</h3>
+	- Create a script linked to an HTML page with CSS that accepts user input and creates a multiplication table.</h3>
 	<p><a href="week5.html" target=_blank>Module 05 - Exercise 1</a><br>
 	 <a href="M05-2.html" target=_blank>Module 05 - Exercise 2</a><br>
 	 <a href="Bullseye.html" target=_blank>Module 05 - Exercise 3</a><br></p>
