--- a/ModuleAssignments/Module05.html
+++ b/ModuleAssignments/Module05.html
@@ -10,7 +10,7 @@
     <section id="page2">
       <h1>Bullseye</h1>
       <img src="http://javascriptbook.com/code/c04/images/teacher.png" id="teacher2" alt="teacher" />
-      <section id="blackboard"></section>
+      <div id="blackboard"></div>
     </section>
     <script src="module05.js"></script>
   </body>
