--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -24,9 +24,11 @@
 		</header>
 
       <h2>Artifacts</h2>
-      <h3><a href="artifact01.html" target=_blank>Module 01 (Create a Resume)<br><img src="images/resume.png" alt="chessboard" height="241" width="388"></a><br>
+      <h3><a href="artifact01.html" target=_blank>Artifact 01 (Create a Resume)<br><img src="images/resume.png" alt="chessboard" height="241" width="388"></a><br>
         - Create a one page, resume style using HTML.</h3>
-      <h3><a href="chess.html" target=_blank>Module 02 (Chessboard)<br><img src="images/chessboard.png" alt="chessboard" height="322" width="318"></a><br>
+      <h3><a href="chess.html" target=_blank>Artifact 02 (Chessboard)<br><img src="images/chessboard.png" alt="chessboard" height="322" width="318"></a><br>
         - Create a one page HTML document that will contain a Chessboard with a CSS file.</h3>
+     <h3><a href="rhombus.html" target=_blank>Artifact 03 - Create a Rhombus<img src="images/rhombus.png" alt="rhombus" height="400" width="100"></a><br>
+	- Create a javascript that will produce a rhombus.</h3> 
 	</body>
 </html>
