--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -28,7 +28,7 @@
         - Create a one page, resume style using HTML.</h3>
       <h3><a href="chess.html" target=_blank>Artifact 02 (Chessboard)<br><img src="images/chessboard.png" alt="chessboard" height="322" width="318"></a><br>
         - Create a one page HTML document that will contain a Chessboard with a CSS file.</h3>
-     <h3><a href="rhombus.html" target=_blank>Artifact 03 - Create a Rhombus<img src="images/rhombus.png" alt="rhombus" height="400" width="100"></a><br>
+     <h3><a href="rhombus.html" target=_blank>Artifact 03 - Create a Rhombus<br><img src="images/rhombus.png" alt="rhombus" height="400" width="100"></a><br>
 	- Create a javascript that will produce a rhombus.</h3> 
 	</body>
 </html>
