--- a/ModuleAssignments/Module07.html
+++ b/ModuleAssignments/Module07.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>JavaScript &amp; jQuery - Chapter 3: Functions, Methods &amp; Objects - Object Constructor</title>
-    <link rel="stylesheet" href="style7-A" />
+    <link rel="stylesheet" href="style7-A.css" />
   </head>
   <body>
     <h1>TravelWorthy</h1>
