--- a/ModuleAssignments/Module08.html
+++ b/ModuleAssignments/Module08.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JavaScript &amp; jQuery - Chapter 5: Document Object Model - Add Element</title>
-  <link rel="stylesheet" href="http://javascriptbook.com/code/c05/css/c05.css" />
+  <link rel="stylesheet" href="style8.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
