--- a/ModuleAssignments/index.html
+++ b/ModuleAssignments/index.html
@@ -54,7 +54,11 @@
 	<p><a href="week5.html" target=_blank>Module 05 - Exercise 1</a><br>
 	 <a href="M05-2.html" target=_blank>Module 05 - Exercise 2</a><br>
 	 <a href="Bullseye.html" target=_blank>Module 05 - Exercise 3</a><br></p>
+
       <h3><a href="Module07.html" target=_blank>Module 07 Assignment</a><br>
 	- Create a new object within javascript.</h3>
-	</body>
+	
+      <h3><a href="Module08.html" target=_blank>Module 08 Assignment</a><br>
+	- Create a javascript function to add items to a list.</h3>
+</body>
 </html>
