--- a/Artifacts/artifact4.html
+++ b/Artifacts/artifact4.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Artifact #4</title>
+<link rel="stylesheet" href="artifact4.css" />
 </head>
 
 <body>
