--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -30,5 +30,6 @@
         - Create a one page HTML document that will contain a Chessboard with a CSS file.</h3>
      <h3><a href="rhombus.html" target=_blank>Artifact 03 - Create a Rhombus<br><img src="images/rhombus.png" alt="rhombus" height="400" width="100"></a><br>
 	- Create a javascript that will produce a rhombus.</h3> 
+     <h3><a href="artifact4.html" target=_blank>Artifact 04 - Validate a form using Javascript<br><img src="images/validateform.png" alt="validate form"</a><br>
 	</body>
 </html>
