--- a/Artifacts/artifact4.html
+++ b/Artifacts/artifact4.html
@@ -75,7 +75,7 @@
   <script src="artifact4.js"></script> 
 <footer>
 <br>
-<a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
+<a href="http://validator.w3.org/check?uri=https://ryanbaird4.github.io/PROG-109/Artifacts/artifact4.html" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
 <a href="https://jigsaw.w3.org/css-validator/check/referer">
 <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" />
 </a>
