--- a/ModuleAssignments/index.html
+++ b/ModuleAssignments/index.html
@@ -60,5 +60,8 @@
 	
       <h3><a href="Module08.html" target=_blank>Module 08 Assignment</a><br>
 	- Create a javascript function to add items to a list.</h3>
+
+      <h3><a href="Module09.html" target=_blank>Module 09 Assignment</a><br>
+	- Create an HTML form that creates dots when spaces on the screen are clicked, along with a "Clean" button to clear the dots that have been added.</h3>
 </body>
 </html>
