--- a/Artifacts/slideshow.html
+++ b/Artifacts/slideshow.html
@@ -14,7 +14,7 @@
 <p id="caption">Beagle</p> 
 <button id="previous">PREVIOUS</button>
 <button id="next">NEXT</button> 
- 
+ <script src="slideshow.js"></script>
 </body>
   <footer>
 <br>
