edited index and artifact 5

--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -30,6 +30,7 @@
         - Create a one page HTML document that will contain a Chessboard with a CSS file.</h3>
      <h3><a href="rhombus.html" target=_blank>Artifact 03 - Create a Rhombus<br><img src="images/rhombus.png" alt="rhombus" height="400" width="100"></a><br>
 	- Create a javascript that will produce a rhombus.</h3> 
-     <h3><a href="artifact4.html" target=_blank>Artifact 04 - Validate a form using Javascript<br><img src="images/validateform.png" alt="validate form"</a><br>
+     <h3><a href="artifact4.html" target=_blank>Artifact 04 - Validate a form using Javascript<br><img src="images/validateform.png" alt="validate form"></a><br>
+     <h3><a href="slideshow.html" target=_blank>Artifact 05 - Create a slideshow using Javascript.<br><img src="images/slideshow.png" alt="slideshow"></a><br>
 	</body>
 </html>
