--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		</div>
 		<footer>
 			<p>&copy; Copyright 2011</p>
+			<p id="date"></p>
 			<script src="home.js"></script>
 		</footer>
 	</body>
