--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -26,6 +26,7 @@
       <h3>My name is Ryan Baird. I am currently taking classes to obtain an Associate's Degree in Information Systems. My goal is to also be accepted into the Data Analytics Bachelor's Program at Bellevue College. Spring Quarter '18 is my first at Bellevue College.<br<
 		Professionally, I would love to make a career in the tech industry. One of my interests is working in big data science.</h3>
 <footer>
+			<p>&copy; Copyright 2011</p>
 			<p id="date"></p>
 			<script src="../home.js"></script>
 </footer>
