--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -32,5 +32,11 @@
 	- Create a javascript that will produce a rhombus.</h3> 
      <h3><a href="artifact4.html" target=_blank>Artifact 04 - Validate a form using Javascript<br><img src="images/validateform.png" alt="validate form"></a><br>
      <h3><a href="slideshow.html" target=_blank>Artifact 05 - Create a slideshow using Javascript.<br><img src="images/slideshow.png" alt="slideshow"></a><br>
+
+<footer>
+			<p>&copy; Copyright 2011</p>
+			<p id="date"></p>
+			<script src="../home.js"></script>
+</footer>
 	</body>
 </html>
