--- a/Coursework/index.html
+++ b/Coursework/index.html
@@ -29,5 +29,11 @@
         <p>Introduces fundamental programming techniques using current web development software. Students design procedures and write computer instructions to solve business problems, learn procedural programming, develop graphical user interfaces for the web and work with events and objects.</p>
 	<p>Prior to this class, I had very little knowledge of web development, aside from a basic HTML tag knowledge. After learning a lot about HTML, CSS, and Javascript, I now understand how websites are built, which languages handle different aspects of a website, and I have a better understanding of priorities on layout, usability, and accessibility when creating a website. I learned not only about how to create a webpage, but a website. I was also able to gain practical experience in using a hosting site for a website. 
         <a href="https://www.bellevuecollege.edu/classes/All/PROG/109" target=_blank>Class Catalog</a>
+
+<footer>
+			<p>&copy; Copyright 2011</p>
+			<p id="date"></p>
+			<script src="../home.js"></script>
+</footer>
 	</body>
 </html>
