--- a/CreativePage/index.html
+++ b/CreativePage/index.html
@@ -23,5 +23,12 @@
 			</nav>
 		</header>
       <h2>Creative Page</h2>
+
+
+<footer>
+			<p>&copy; Copyright 2011</p>
+			<p id="date"></p>
+			<script src="../home.js"></script>
+</footer>
     </body>
 </html>
