--- a/ModuleAssignments/index.html
+++ b/ModuleAssignments/index.html
@@ -63,5 +63,11 @@
 
       <h3><a href="Module09.html" target=_blank>Module 09 Assignment</a><br>
 	- Create an HTML form that creates dots when spaces on the screen are clicked, along with a "Clean" button to clear the dots that have been added.</h3>
+
+<footer>
+			<p>&copy; Copyright 2011</p>
+			<p id="date"></p>
+			<script src="../home.js"></script>
+</footer>
 </body>
 </html>
