--- a/ContactMe/index.html
+++ b/ContactMe/index.html
@@ -37,6 +37,12 @@
           </label><br>
           <input type="submit" name="myContact" value="Submit" />
 	</fieldset>
-      </form>    
+      </form>  
+
+<footer>
+			<p>&copy; Copyright 2011</p>
+			<p id="date"></p>
+			<script src="../home.js"></script>
+</footer>  
     </body>
 </html>
