--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</header>
 		<div class="main">
 			<section class="feature">
-				<h3>Hello, everyone! Welcome to my website. Here you will find my coursework, different projects I have completed using HTML and CSS (artifacts), and homework assignments utilizing skills learned with HTML and CSS (module assignments). You may get to know me better under about me and my creative page, or you may contact me! Enjoy my website!</h3>
+				<h3>Hello, everyone! Welcome to my website. Here you will find my coursework and different projects I have completed while taking intro to web development (PROG 109) including artifacts and module assignments. This website was developed as part of my web development class. You may get to know me better under about me and my creative page, or you may contact me! Enjoy my website!</h3>
 			</section>
 			<article class="column1">
 				<h3>Column 1</h3>
@@ -41,10 +41,9 @@
 			<p id="date"></p>
 			<script src="home.js"></script>
 		</footer>
- <a href="http://jigsaw.w3.org/css-validator/check/referer"> 
- <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" /> </a>
- <a href="http://validator.w3.org/check?uri=referer">
- <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /> </a>
+ <a href="http://validator.w3.org/check?uri=https://ryanbaird4.github.io/PROG-109/index.html" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer">
+<img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" />
 	</body>
 </html>
 
