edit creative page

--- a/CreativePage/index.html
+++ b/CreativePage/index.html
@@ -23,8 +23,9 @@
 			</nav>
 		</header>
       <h2>Creative Page</h2>
-
-
+      <h3><a href="https://www.linkedin.com/in/ryan-baird-639142ba/"><img src="https://media.licdn.com/dms/image/C5603AQEzM7THk7mXYw/profile-displayphoto-shrink_200_200/0?e=1534377600&v=beta&t=1WTyCHsJfHxGU6rigKydaffb87vBf-csSeXVzVfW2sk" alt="linkedin"><br>LinkedIn Page</a>
+      <p>My name is Ryan Baird. I am a morgage professional currently enrolled at Bellevue College.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ALZHF5UqnU4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <footer>
 			<p>&copy; Copyright 2011</p>
 			<p id="date"></p>
