--- a/Artifacts/index.html
+++ b/Artifacts/index.html
@@ -38,5 +38,9 @@
 			<p id="date"></p>
 			<script src="../home.js"></script>
 </footer>
+
+<a href="http://validator.w3.org/check?uri=https://ryanbaird4.github.io/PROG-109/Artifacts/index.html" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer">
+<img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" /></a>
 	</body>
 </html>
