--- a/ContactMe/index.html
+++ b/ContactMe/index.html
@@ -43,6 +43,10 @@
 			<p>&copy; Copyright 2011</p>
 			<p id="date"></p>
 			<script src="../home.js"></script>
-</footer>  
+</footer> 
+
+<a href="http://validator.w3.org/check?uri=https://ryanbaird4.github.io/PROG-109/ContactMe/index.html" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer">
+<img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" /></a> 
     </body>
 </html>
