--- a/ContactMe/index.html
+++ b/ContactMe/index.html
@@ -23,7 +23,8 @@
 			</nav>
 		</header>
       <h2>Contact Me</h2>
-      <form action="thankyou.html" method="get" name="myContact">
+      <div id="errorMessages"></div>
+      <form action="thankyou.html" method="get" name="myContact" onsubmit="return ValidateForm();">
         <fieldset>
           <legend>Contact Form</legend>
           <label>Name:<br>
@@ -42,7 +43,7 @@
 <footer>
 			<p>&copy; Copyright 2011</p>
 			<p id="date"></p>
-			<script src="../home.js"></script>
+			<script src="contactme.js"></script>
 </footer> 
 
 <a href="http://validator.w3.org/check?uri=https://ryanbaird4.github.io/PROG-109/ContactMe/index.html" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
