--- a/ContactMe/index.html
+++ b/ContactMe/index.html
@@ -28,13 +28,13 @@
         <fieldset>
           <legend>Contact Form</legend>
           <label>Name:<br>
-            <input type="text" name="name" />
+            <input type="text" id="name" />
           </label><br>
           <label>Email:<br>
-            <input type="text" name="email" />
+            <input type="text" id="email" />
           </label><br>
           <label>Comment:<br>
-            <input type="text" name="comment" />
+            <input type="text" id="comment" />
           </label><br>
           <input type="submit" name="myContact" value="Submit" />
 	</fieldset>
